Navigation Drawer Menu
Menu of the Navigation Drawer Added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity">
+        <activity android:name=".Activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.SignUpActivity"></activity>
-        <activity android:name=".Activities.ForgotPassword"></activity>
-        <activity android:name=".Activities.HomeActivity"></activity>
+        <activity android:name=".Activities.SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Activities.ForgotPassword"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Activities.AboutUs"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Activities.MenuActivity"></activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
