--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".Activities.MenuActivity"></activity>
         <activity android:name=".Activities.OrganizationAddEvent"></activity>
         <activity android:name=".Activities.OrganizationAddInternship"></activity>
+        <activity android:name=".Activities.OrganizationEventProfile"></activity>
+        <activity android:name=".Activities.OrganizationInternshipProfile"></activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
