--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,16 +21,22 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.SignUpActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".Activities.ForgotPassword"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".Activities.AboutUs"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".Activities.MenuActivity"></activity>
-        <activity android:name=".Activities.OrganizationAddEvent"></activity>
-        <activity android:name=".Activities.OrganizationAddInternship"></activity>
-        <activity android:name=".Activities.OrganizationEventProfile"></activity>
-        <activity android:name=".Activities.OrganizationInternshipProfile"></activity>
+        <activity android:name=".Activities.OrganizationAddEvent"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".Activities.OrganizationAddInternship"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".Activities.OrganizationEventProfile"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".Activities.OrganizationInternshipProfile"
+            android:windowSoftInputMode="adjustPan"></activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
