--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.unistud"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -15,8 +15,20 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        compileOptions {
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
 }
+
+// This enables Gradle to locate Android library dependencies in the same manner as jar-based dependencies. Add to the bottom of the file.
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,7 +51,11 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:percent:28.0.0'
 
+    // The GoCoder SDK library dependency declaration
+    implementation 'com.wowza.gocoder.sdk.android:com.wowza.gocoder.sdk:1.5b7@aar'
 
+    //ExoPlayer to play videos
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.6'
 
 }
 apply plugin: 'com.google.gms.google-services'
