--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.unistud">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -38,6 +42,10 @@
         <activity android:name=".Activities.OrganizationInternshipProfile"
             android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".Activities.StudentMenuActivity"></activity>
+        <activity android:name=".Activities.TutorialLiveStream"></activity>
+        <activity android:name=".Activities.StudentAddTutorial"></activity>
+        <activity android:name=".Activities.PlayVideo"
+            android:configChanges="orientation|screenSize|layoutDirection"></activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
