--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         <activity android:name=".Activities.StudentMenuActivity"></activity>
         <activity android:name=".Activities.TutorialLiveStream"></activity>
         <activity android:name=".Activities.StudentAddTutorial"></activity>
+        <activity android:name=".Activities.StudentRegister1"></activity>
+        <activity android:name=".Activities.StudentRegister2"></activity>
         <activity android:name=".Activities.PlayVideo"
             android:configChanges="orientation|screenSize|layoutDirection"></activity>
 
