--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".Activities.StudentRegister1"></activity>
         <activity android:name=".Activities.StudentRegister2"></activity>
         <activity android:name=".Activities.StudentEventProfile"></activity>
+        <activity android:name=".Activities.StudentInternshipProfile"></activity>
         <activity android:name=".Activities.PlayVideo"
             android:configChanges="orientation|screenSize|layoutDirection"></activity>
 
