--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 07 00:42:28 EET 2019
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+#Tue May 07 02:38:08 EET 2019
+sdk.dir=/Users/aurelhoxha/Library/Android/sdk
