--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
