--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.example.unistud">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
@@ -16,7 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity"
+        <activity android:name=".Activities.MessageActivity"></activity>
+        <activity
+            android:name=".Activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -25,58 +29,69 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.SignUpActivity"
+        <activity
+            android:name=".Activities.SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".Activities.ForgotPassword"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activities.ForgotPassword"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".Activities.AboutUs"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Activities.MenuActivity"></activity>
-        <activity android:name=".Activities.OrganizationAddEvent"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".Activities.OrganizationAddInternship"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".Activities.OrganizationEventProfile"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".Activities.OrganizationInternshipProfile"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".Activities.StudentMenuActivity"></activity>
-        <activity android:name=".Activities.TutorialLiveStream"></activity>
-        <activity android:name=".Activities.StudentAddTutorial"></activity>
-        <activity android:name=".Activities.StudentRegister1"></activity>
-        <activity android:name=".Activities.StudentRegister2"></activity>
-        <activity android:name=".Activities.StudentEventProfile"></activity>
-        <activity android:name=".Activities.StudentInternshipProfile"></activity>
-        <activity android:name=".Activities.StudentAddItem"></activity>
-        <activity android:name=".Activities.ProfileTutorials"></activity>
-        <activity android:name=".Activities.ProfileInternships"></activity>
-        <activity android:name=".Activities.ProfileEvents"></activity>
-        <activity android:name=".Activities.ProfileItems"></activity>
-        <activity android:name=".Activities.StudentTradeWindow"></activity>
-        <activity android:name=".Activities.PlayVideo"
-            android:configChanges="orientation|screenSize|layoutDirection"></activity>
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activities.AboutUs"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Activities.MenuActivity" />
+        <activity
+            android:name=".Activities.OrganizationAddEvent"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activities.OrganizationAddInternship"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activities.OrganizationEventProfile"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activities.OrganizationInternshipProfile"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".Activities.StudentMenuActivity" />
+        <activity android:name=".Activities.TutorialLiveStream" />
+        <activity android:name=".Activities.StudentAddTutorial" />
+        <activity android:name=".Activities.StudentRegister1" />
+        <activity android:name=".Activities.StudentRegister2" />
+        <activity android:name=".Activities.StudentEventProfile" />
+        <activity android:name=".Activities.StudentInternshipProfile" />
+        <activity android:name=".Activities.StudentAddItem" />
+        <activity android:name=".Activities.ProfileTutorials" />
+        <activity android:name=".Activities.ProfileInternships" />
+        <activity android:name=".Activities.ProfileEvents" />
+        <activity android:name=".Activities.ProfileItems" />
+        <activity android:name=".Activities.StudentTradeWindow" />
+        <activity android:name=".Activities.StudentUserList" />
+        <activity android:name=".Activities.MyMessages"/>
+        <activity
+            android:name=".Activities.PlayVideo"
+            android:configChanges="orientation|screenSize|layoutDirection" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
