--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
         <activity android:name=".Activities.ProfileEvents"></activity>
         <activity android:name=".Activities.ProfileItems"></activity>
         <activity android:name=".Activities.StudentTradeWindow"></activity>
+        <activity android:name=".Activities.MessageActivity"></activity>
+        <activity android:name=".Activities.MyMessages"></activity>
+        <activity android:name=".Activities.StudentUserList"></activity>
         <activity android:name=".Activities.PlayVideo"
             android:configChanges="orientation|screenSize|layoutDirection"></activity>
 
