--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 08 08:58:41 EET 2019
-sdk.dir=/Users/aurelhoxha/Library/Android/sdk
+#Sun May 12 01:28:44 EET 2019
+sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
