--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity android:name=".Activities.MessageActivity"></activity>
         <activity android:name=".Activities.MyMessages"></activity>
         <activity android:name=".Activities.StudentUserList"></activity>
+        <activity android:name=".Activities.StudentEventProfile_1"></activity>
         <activity android:name=".Activities.EditUserProfile"
                   android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".Activities.StudentItemProfile"></activity>
